--- a/index.html
+++ b/index.html
@@ -1,315 +1,36 @@
-<div class='assembly'>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-    <div class='square'></div>
-  </div>
+<div class="doodle">
+	
+	<input type="checkbox" id="play" name="play"/>
+	<label for="play">
+		<img src="http://www.google.com/logos/2012/muybridge12-hp-p.jpg" alt="Play" />
+	</label>
+	
+	<div class="animate">
+		
+		<div class="g"></div>
+		<div class="g"></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div class="l"></div>
+		<div></div>
+		
+		<div class="g"></div>
+		<div class="g"></div>
+		<div class="o"></div>
+		<div class="o play"></div>
+		<div class="g"></div>
+		<div class="l"></div>
+		<div class="e"></div>
+		
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div class="g"></div>
+		<div></div>
+		<div></div>
+		
+	</div>
+	
+</div>
